# leptos-csr-tailwind-template

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  index.html
.github/workflows/: static.yml
src/: lib.rs  main.rs
src/pages/: mod.rs  not_found.rs  welcome.rs
